--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
-asgiref==3.8.1
+# Django
 Django==5.1.3
 django-cors-headers==4.6.0
+
+# DRF
 djangorestframework==3.15.2
+
+# swagger
 drf-spectacular==0.27.2
 
-psycopg2-binary
-python-dotenv==1.0.1
+# database
+psycopg2-binary==2.9.10
 
-sqlparse==0.5.2
-tzdata==2024.2
-
-PyYAML==6.0.2
+# simple jwt authentication
+djangorestframework_simplejwt==5.4.0
 PyJWT==2.10.1
 
+# environment
+python-dotenv==1.0.1
+PyYAML==6.0.2
 
 
